<resources>
    <string name="app_name">My Film Searcher</string>

    <string name="shoushenk">Побег из Шоушенка</string>
    <string name="shoushenk_opisanie">Бухгалтер Энди Дюфрейн обвинён в убийстве собственной жены и её любовника. Оказавшись в тюрьме под названием Шоушенк, он сталкивается с жестокостью и беззаконием, царящими по обе стороны решётки. Каждый, кто попадает в эти стены, становится их рабом до конца жизни. Но Энди, обладающий живым умом и доброй душой, находит подход как к заключённым, так и к охранникам, добиваясь их особого к себе расположения.</string>

    <string name="zelenaia_milia">Зеленая миля</string>
    <string name="zelenaia_milia_opisanie">Пол Эджкомб — начальник блока смертников в тюрьме «Холодная гора», каждый из узников которого однажды проходит «зеленую милю» по пути к месту казни. Пол повидал много заключённых и надзирателей за время работы. Однако гигант Джон Коффи, обвинённый в страшном преступлении, стал одним из самых необычных обитателей блока.</string>

    <string name="forest_gamp">Форест Гамп</string>
    <string name="forest_gamp_opisanie">От лица главного героя Форреста Гампа, слабоумного безобидного человека с благородным и открытым сердцем, рассказывается история его необыкновенной жизни.

Фантастическим образом превращается он в известного футболиста, героя войны, преуспевающего бизнесмена. Он становится миллиардером, но остается таким же бесхитростным, глупым и добрым. Форреста ждет постоянный успех во всем, а он любит девочку, с которой дружил в детстве, но взаимность приходит слишком поздно.</string>

    <string name="detali_button">Детали</string>
    <string name="check_box_like">Нравится</string>
    <string name="comment">Комментарий...</string>
    <string name="priglasit_druga_button">Пригласить друга</string>

    <string name="drawer_main">Главный экран</string>
    <string name="drawer_about">О приложении</string>

    <string name="nav_header_title">Это лучшее приложение мира</string>
    <string name="nav_header_subtitle">Это подпись лучшего приложения мира</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="add_new_film_menu">Добавить фильм</string>
    <string name="new_film_name">Название фильма</string>
    <string name="new_film_description">Описание фильма</string>
    <string name="ujasi">Ужасы</string>
    <string name="dramma">Драмма</string>
    <string name="comedia">Комедия</string>
    <string name="triller">Триллер</string>
    <string name="prikluchenie">Приключение</string>
    <string name="add_film">Добавить фильм</string>
    <string name="drawer_exit">Выйти</string>
    <string name="navigation_name">Kovalev Andrei</string>
    <string name="navigation_email">andruxa040@gmail.com</string>
    <string name="favorites">Избранное</string>
    <string name="delete">Удалить</string>
    <string name="add">Добавить в избранное</string>
    <string name="cinema">Кинотеатры</string>
    <string name="remind">Напоминание</string>
    <string name="date_remind">Дата и время</string>

</resources>
