<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:chipSpacing="8dp">

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ujasi"
        app:checkedIcon="@drawable/ic_done_24px"
        app:checkedIconVisible="true" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dramma"
        app:checkedIcon="@drawable/ic_done_24px"
        app:checkedIconVisible="true" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comedia"
        app:checkedIcon="@drawable/ic_done_24px"
        app:checkedIconVisible="true" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triller"
        app:checkedIcon="@drawable/ic_done_24px"
        app:checkedIconVisible="true" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prikluchenie"
        app:checkedIcon="@drawable/ic_done_24px"
        app:checkedIconVisible="true" />

</com.google.android.material.chip.ChipGroup>