<!--Меню панели приложения -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.otus.demo.materialcardview.MainActivity">
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="1"
        android:title="@string/priglasit_druga_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="2"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_black_24dp"/>

    <item
        android:id="@+id/action_cinema"
        android:orderInCategory="3"
        android:title="@string/cinema"
        app:showAsAction="never"/>

</menu>