<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/film_name_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/acrivity_double_horizontal_margin"
        android:layout_marginTop="@dimen/activity_double_vertical_margin"
        android:layout_marginEnd="@dimen/acrivity_double_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_double_vertical_margin"
        android:hint="@string/new_film_name"
        android:layout_gravity="center"
        />


    <TextView
        android:id="@+id/date_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/acrivity_double_horizontal_margin"
        android:layout_marginTop="@dimen/activity_double_vertical_margin"
        android:layout_marginEnd="@dimen/acrivity_double_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_double_vertical_margin"
        android:hint="@string/date_remind"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/remind_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_double_vertical_margin"
        android:text="@string/remind" />


</LinearLayout>