<?xml version="1.0" encoding="utf-8"?><!--Содержимое макета Добавить новый фильм -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_film_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_double_vertical_margin"
                android:layout_marginBottom="@dimen/activity_double_vertical_margin"
                android:hint="@string/new_film_name" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_film_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_film_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/chips_addnewfilm" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_film"
            app:backgroundTint="@color/colorPrimaryDark" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>